# md2docx-python

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  md2docx.toml  md2word.toml
examples/: test.docx  test.md
python/: README.md  pyproject.toml  pyrightconfig.json
python/md2docx/: __init__.py  __main__.py  cli.py  config.py  converter.py  heading.py  ir.py  parser.py  styles.py
python/tests/: test_converter.py  test_heading.py  test_parser.py
src/: config.rs  converter.rs  heading.rs  ir.rs  main.rs  parser.rs  styles.rs
